--- a/Module1_SQL/Class1.ipynb
+++ b/Module1_SQL/Class1.ipynb
@@ -34,6 +34,7 @@
    },
    "outputs": [],
    "source": [
+    "%sql\n",
     "select * from default.customerdetails"
    ]
   }
@@ -47,7 +48,7 @@
     "environment_version": "2"
    },
    "inputWidgetPreferences": null,
-   "language": "sql",
+   "language": "python",
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
@@ -55,7 +56,7 @@
    "widgets": {}
   },
   "language_info": {
-   "name": "sql"
+   "name": "python"
   }
  },
  "nbformat": 4,
