--- a/Module1_SQL/class3.ipynb
+++ b/Module1_SQL/class3.ipynb
@@ -637,9 +637,92 @@
    },
    "outputs": [],
    "source": [
+    "-- Employee + Their Manager\n",
     "SELECT distinct e1.first_name AS employee, e2.first_name AS manager, e1.department\n",
     "FROM emp e1\n",
     "LEFT JOIN emp e2 ON e1.manager_id = e2.emp_id;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1abdaebe-fbf6-4990-a14c-ec5ca1eeecfd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "--Find Direct Reporting Managers counts\n",
+    "\n",
+    "SELECT e2.first_name AS manager, COUNT(e1.emp_id) AS team_size\n",
+    "FROM emp e1\n",
+    "INNER JOIN emp e2 ON e1.manager_id = e2.emp_id\n",
+    "GROUP BY e2.first_name;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2fd47e99-7b35-43e4-b0ab-0b571e30e2be",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Top 3 Customers by Spend\n",
+    "SELECT \n",
+    "c.first_name, c.last_name, SUM(od.quantity * od.price_each) AS total_spent\n",
+    "FROM customers c \n",
+    "INNER JOIN orders o ON c.customer_id = o.customer_id\n",
+    "INNER JOIN Order_details od on o.order_id = od.order_id\n",
+    "GROUP BY c.customer_id,c.first_name, c.last_name\n",
+    "ORDER BY total_spent DESC\n",
+    "LIMIT 3\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9df23e21-d6ee-49b7-8d52-6b4f46883a00",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "-- Get list of all unique customer cities + unique product categories.(WITH DUPLICATES)\n",
+    "\n",
+    "SELECT DISTINCT city AS item FROM customers\n",
+    "UNION ALL \n",
+    "SELECT DISTINCT category FROM order_details;"
    ]
   }
  ],
